# Copyright 2024 Bruce Merry
#
# This program is free software: you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
# more details.
#
# You should have received a copy of the GNU General Public License along
# with this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "modbus-robust"
version = "0.2.0"
edition = "2021"
authors = ["Bruce Merry"]
license = "GPL-3.0-or-later"
description = "Layer over tokio-modbus to automatically reconnect on failure"
repository = "https://github.com/bmerry/modbus-robust"

[dependencies]
async-trait = "0.1.75"
tokio = "1.35.1"
tokio-modbus = "0.16.0"
tokio-serial = "5.4.4"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt"] }
